--- a/Osu clone/App.config
+++ b/Osu clone/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <connectionStrings>
+      <add name="OsuDB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Проги C#\Osu clone\Osu clone\Database1.mdf;Integrated Security=True"/>
+    </connectionStrings>
 </configuration>
